creusot/tests/should_fail/prusti/blocked_lifetime/invariant2.stderr
error[creusot]: Invalid dereference
 --> invariant2.rs:5:12
  |
5 | #[ensures(*x == 0u32)]
  |            ^

error: aborting due to previous error

